@@ -6,7 +6,7 @@ SUBDIRS = C cs_CZ da_DK es_AR es_ES et_EE fr_FR pt_BR ru_RU \
 		  sv_SE tr_TR it_IT pt_PT bg_BG ja_JP ko_KR \
 		  lv_LV de_DE nl_NL no_NO sl_SI pl_PL vi_VN be_BY \
 		  uk_UA el_GR nb_NO zh_CN fi_FI en_US en_GB de_CH \
-                  de_AT fr_CH sk_SK
+                  de_AT fr_CH sk_SK zh_TW
 
 MAINTAINERCLEANFILES = Makefile.in fluxbox-nls.hh
 EXTRA_DIST=fluxbox-nls.hh nlsinfo
